--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,8 @@
    "outputs": [],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "title="
+    "title=\"art vandelay\"\n",
+    "tit"
    ]
   },
   {
