--- a/index.ipynb
+++ b/index.ipynb
@@ -156,8 +156,8 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "title=\"art vandelay\"\n",
-    "title.upper()"
+    "help(str\n",
+    "    )"
    ]
   },
   {
