Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,8 +547,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n",
-    "help(str)"
+    "\"art vandelay\" # 'Art Vandelay'\n"
    ]
   },
   {
