Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,9 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "title=\"art vandelay\"\n",
+    "title.u()"
    ]
   },
   {
