--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "st"
    ]
   },
   {
