--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,8 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "e=\"\""
+    "e=\"art.vandelay@vandelay.co\"\n",
+    "e."
    ]
   },
   {
