Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "e=\"art.vandelay@vandelay.co\"\n",
-    "e"
+    "e.endwith"
    ]
   },
   {
