Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,13 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "\n",
-    "help(str)"
+    "endswith(...)\n",
+    " |      S.endswith(suffix[, start[, end]]) -> bool\n",
+    " |      \n",
+    " |      Return True if S ends with the specified suffix, False otherwise.\n",
+    " |      With optional start, test S beginning at that position.\n",
+    " |      With optional end, stop comparing S at that position.\n",
+    " |      suffix can also be a tuple of strings to try."
    ]
   },
   {
