--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,8 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "\n",
-    "s=\n",
+    "s=\"art.vandelay@vandelay.co\"\n",
+    "\n",
     "endswith(...)\n",
     " |      S.endswith(suffix[, start[, end]]) -> bool\n",
     " |      \n",
