--- a/index.ipynb
+++ b/index.ipynb
@@ -608,7 +608,7 @@
     "\"art.vandelay@vandelay.co\" # False\n",
     "\n",
     "s=\"art.vandelay@vandelay.co\"\n",
-    "s.endswith*\n",
+    "s.endswith(su)\n",
     "endswith(...)\n",
     " |      S.endswith(suffix[, start[, end]]) -> bool\n",
     " |      \n",
