Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
     "\"art.vandelay@vandelay.co\" # False\n",
     "\n",
     "s=\"art.vandelay@vandelay.co\"\n",
-    "s.endswith(suffix[,start[com]])\n"
+    "s.endswith([com]])\n"
    ]
   },
   {
